worked on micro lidar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,8 @@
     "tuple": "cpp",
     "typeinfo": "cpp",
     "utility": "cpp",
-    "complex": "cpp"
+    "complex": "cpp",
+    "string": "cpp"
   },
   "C_Cpp.default.configurationProvider": "vscode-wpilib",
   "C_Cpp.dimInactiveRegions": false
